--- a/styles.css
+++ b/styles.css
@@ -40,14 +40,14 @@ body{
   padding: 0 20px;
 }
 
-.header .nav-links li:hover{
+.header .nav-links li:hover,
+.overlay a:hover{
   transform: scale(1.1);
 }
 
 .header .nav-links a{
   font-size: 700;
   color: azure;
-  text-decoration: none;
 }
 
 .header .nav-links li a:hover{
@@ -58,7 +58,13 @@ body{
   width: 100%;
 }
 
-.header .btn button{
+.menu{
+  display: none;
+}
+
+.header .btn button,
+.header .menu button{
+  margin-left: 20px;
   font-weight: 700;
   color: rgb(89, 11, 150);
   padding: 9px 25px;
@@ -69,8 +75,77 @@ body{
   transition: all 0.3s ease 0s;
 }
 
-.header .btn button:hover{
+.header .btn button:hover
+.header .menu button:hover{
 background-color: aliceblue;
 color: rgb(50, 0, 97);
 transform: scale();
+}
+
+@media  screen and (max-width: 800px) {
+  .nav-links, .btn{
+    display: none;
+  }
+  .menu{
+    display: inherit;
+  }
+  
+}
+
+/*NAV RESPONSIVE*/
+
+.header a{
+  text-decoration: none;
+}
+
+.header .overlay{
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  background-color: rgba(33, 49, 63, .95);
+  overflow: hidden;
+  transition: all 0.3s;
+}
+
+.header .overlay .overlay-content{
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.header .overlay a{
+  padding: 15px;
+  font-size: 35px;
+  display: block;
+  transition: all 0.3s ease 0s;
+  font-weight: 700;
+  color: aliceblue;
+}
+.header .overlay a:hover,
+.header .overlay a:focus{
+  color: blueviolet;
+}
+
+.header .overlay .close{
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 65px;
+}
+
+@media screen and (max-height:450px) {
+  .header .overlay a{
+    font-size: 20px;
+  }
+
+  .header .overlay .close{
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
 }
